Add meta to head to help with mobile view

--- a/resize.html
+++ b/resize.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalabel=0"
+    />
     <title>Image Resizer (YATIAC)</title>
     <link
       rel="stylesheet"
